Fixed z-index in loader bug

--- a/src/app/components/layouts/loader/loader.component.scss
+++ b/src/app/components/layouts/loader/loader.component.scss
@@ -60,6 +60,7 @@
 
 .hide{
     transition: all .5s;
+    z-index: -5;
 }
 
 .loader.hide{
